--- a/ios/SMiosV2/Info.plist
+++ b/ios/SMiosV2/Info.plist
@@ -45,6 +45,11 @@
 	<string>Allow Smart Coach to use your location services</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>We need access to your microphone to record audio for videos.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+    	<key>NSAllowsArbitraryLoads</key>
+    	<true/>
+	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
