--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-ble-plx": "^2.0.3",
     "react-native-camera": "^4.2.1",
     "react-native-maps": "^1.7.1",
-    "react-native-permissions": "^3.8.4",
+    "react-native-permissions": "3.6.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-quick-base64": "^2.0.7",
     "react-native-safe-area-context": "^4.7.1",
