--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native": "0.72.4",
     "react-native-ble-plx": "^2.0.3",
     "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-maps": "^1.7.1",
     "react-native-permissions": "3.6.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-quick-base64": "^2.0.7",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.13.0",
