--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-axios": "^0.17.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.13.4",
