--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "postinstall": "react-native setup-ios-permissions && pod-install",
-    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.5.1",
